src/App.css
.App{    
    max-width: 55%;
    margin: 5em auto;
    border-radius: 1em;
    padding: 2em;
    display: flex;
    flex-direction: column;
    background-color: hsl(0, 0%, 100%);
    font-family: "Outfit", sans-serif;
}

.App > img{
    max-width: 100%;
    border-radius: 1em;
}

.App > h1{
    font-family: "Young Serif", sans-serif;
    font-weight: 400;    
    margin-bottom: 0;
    font-size: 40px;
}

.App > p {    
    font-size: 16px;
    
}

h2{
    font-family: "Young Serif", sans-serif;
    font-weight: 400;    
    margin-bottom: 0;
    color: hsl(14, 45%, 36%);
    margin-bottom: 0;
}

.timeSection{    
    margin-top: 1em;
    border-radius: 1em;
    background-color: hsl(330, 100%, 98%);
    padding: 1em;    
}

.timeSection > h2{
    margin-top: 0;
    color: hsl(332, 51%, 32%);
    font-size: 16px;
    font-weight: bold;
}

.nutritionTable{
    display: flex;
    flex-direction: row;
    justify-content: left;       
}

.nutritionTable > p{
    justify-content: left;
    padding: 0;
    width: 40%;
    margin-left: 2em;    
}

.nutritionTable > span{
    display: flex;
    align-items: center;
}

hr{    
    width: 100%;
    border-top: 0;
    margin: 0;
}

@media only screen and (max-width: 700px) {
    .App {          
      min-width: 90vw;
      height: 100%;  
      margin: 0 auto;    
    }    
  }

